fin dia 29 Marions te quiero

--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -109,9 +109,9 @@ En primer lugar se ha realizado una limpieza de datos. Esta limpieza de datos ha
 
 \begin{enumerate}
     \item \textbf{Contraste de Archivos:} Contrastar que los diferentes archivos de datos no contenían datos duplicados o incoherencias.
-    \item \textbf{Cálculo de Medias:} Calcular de manera automatizada las medias de \textit{Frecuencia Respiratoria} y \textit{Flujo de Oxígeno} cada hora.
-    \item \textbf{Datos faltantes:} Determinar que pacientes y variables tenían un alto número de datos faltantes y eliminarlos del estudio.
-    \item \textbf{Variables no Relevantes:} Eliminar variables que no aportaban información relevante para el estudio.
+    \item \textbf{Cálculo de Medias:} Calcular de manera automatizada las medias de \textit{Frecuencia Respiratoria} y \textit{Saturación de Oxígeno} cada hora.
+    \item \textbf{Datos Faltantes:} Determinar que pacientes y variables tenían un alto número de datos faltantes y eliminarlos del estudio.
+    \item \textbf{Variables No Relevantes:} Eliminar variables que no aportaban información relevante para el estudio.
 \end{enumerate}
 
  \paragraph*{Contraste de Archivos}
@@ -204,6 +204,6 @@ El resultado para el paciente \textit{JJB\_11182744} ha sido el siguiente mostra
 
 \paragraph*{Datos Faltantes}
 
-Se ha realizado un estudio de los datos faltantes en el estudio. Este estudio ha consistido en determinar que pacientes y variables tenían un alto número de datos faltantes y eliminarlos del estudio. 
+Se ha realizado un estudio de los datos faltantes en el estudio. Este estudio ha consistido en determinar que pacientes y que variables tenían un alto número de datos faltantes y eliminarlos del estudio. 
 
 
